syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Event {
    string uuid                         = 1;
    string heading                      = 2;
    google.protobuf.Timestamp date_time = 3;
    google.protobuf.Duration duration   = 4;
    string description                  = 5;
    string owner                        = 6;
    reserved 7;
}

enum ErrorCode {
    OK =    0;
    ERROR = 1;
}

message Response {
    ErrorCode error = 1;
}

message EventsResponse {
    ErrorCode error         = 1;
    repeated Event events   = 2;
}

message CreateRequest {
    Event event = 1;
}

message UpdateRequest {
    string uuid = 1;
    Event event = 2;
}

message RemoveRequest {
    string uuid = 1;
}

message DataRequest {
    google.protobuf.Timestamp date_time = 1;
}

service GRPC {
    rpc Create(CreateRequest)           returns(Response);
    rpc Update(UpdateRequest)           returns(Response);
    rpc Remove(RemoveRequest)           returns(Response);
    rpc DailyEventList(DataRequest)     returns(EventsResponse);
    rpc WeeklyEventList(DataRequest)    returns(EventsResponse);
    rpc MonthlyEventList(DataRequest)   returns(EventsResponse);
}
